--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,13 @@ jobs:
     steps:
       
       - uses: actions/checkout@v3
+      - run: |
+          date > generated.txt
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add .
+          git commit -m "generated"
+          git push
 
       
       - name: Run a one-line script
@@ -36,15 +43,10 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
           
-      - name: Zip Release
-        # You may pin to the exact commit or the version.
-        # uses: TheDoctor0/zip-release@a24011d8d445e4da5935a7e73c1f98e22a439464
-        uses: TheDoctor0/zip-release@0.7.1
-        with:
-         type: 'zip'
-         filename: 'release.zip'
-         
-        run: echo "the github zip is {{ $INPUT_FILENAME}}"
+     
+    
+     
+      
 "
 
           
