--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,8 @@ jobs:
       - uses: actions/checkout@v3
       - run: |
           date > generated.txt
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.name kjs2021
+          git config user.email kksaini6@yahoo.com
           git add .
           git commit -m "generated"
           git push
