--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,12 @@ jobs:
         with:
           files: ${{github.workspace}}
           dest: result.zip
-     
-    
+      - uses: actions/upload-artifact@v1
+         with:
+          name: my-artifact
+          path: ${{ github.workspace }}/result.zip
+       
+       
      
       
 
