--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,17 @@ jobs:
         with:
           name: my-artifact
           path: ${{ github.workspace }}/result.zip
-       
+          
+      - name: push
+        uses: actions-x/commit@v6
+        with:
+          name: GitHub Actions Autocommitter
+          branch: main
+          files: result.zip
+          repository: kjs2021/maven
+          force: true
+         
+
        
      
       
