--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,7 @@ jobs:
           branch: main
           files: result.zip
           repository: kjs2021/maven
+          token: ${{ secrets.MY_SECRET_TOKEN }}
           force: true
          
 
