--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
           name: GitHub Actions Autocommitter
           branch: main
           files: result1.zip
-          repository: https://github.com/kjs2021/maven.git
+          repository: https://github.com/kjs2021/maven
           token: ${{ github.token }}
           force: true
          
