--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,15 +30,15 @@ jobs:
           name: my-artifact
           path: ${{ github.workspace }}/result1.zip
           
-      - name: push
-        uses: actions-x/commit@v6
-        with:
-          name: GitHub Actions Autocommitter
-          branch: main
-          files: result1.zip
-          repository: https://github.com/kjs2021/maven
-          token: ${{ github.token }}
-          force: true
+#       - name: push
+#         uses: actions-x/commit@v6
+#         with:
+#           name: GitHub Actions Autocommitter
+#           branch: main
+#           files: result1.zip
+#           repository: https://github.com/kjs2021/maven
+#           token: ${{ github.token }}
+#           force: true
          
 
        
