--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,13 +22,13 @@ jobs:
       - uses: vimtor/action-zip@v1
         with:
           files: ${{github.workspace}}
-          dest: result-{{ github.sha }}.zip
+          dest: result-${{ github.sha }}.zip
       - name: push
         uses: actions-x/commit@v6
       - uses: actions/upload-artifact@v1
         with:
           name: my-artifact
-          path: ${{ github.workspace }}/result-{{ github.sha }}.zip
+          path: ${{ github.workspace }}/result-${{ github.sha }}.zip
           
 #       - name: push
 #         uses: actions-x/commit@v6
