--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,9 @@ jobs:
   zip-files:
     runs-on: ubuntu-latest
     steps:
+      
       - uses: actions/checkout@v2
+      - run : rm -f result*
       - uses: vimtor/action-zip@v1
         with:
           files: ${{github.workspace}}
