--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
 #           cat ${{ env.Filename}}
         uses: actions-js/push@master
         with:
-           github_token: ${{ secrets.Maven_zip}}
+           github_token: ${{ secrets.MAVEN_ZIP}}
            branch: main
            message: 'Auto commit from github action zip'
            directory: ./dev
