--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
            github_token: ${{ secrets.MAVEN_ZIP}}
            branch: main
            message: 'Auto commit from github action zip'
-           directory: ./dev
+           directory: dev
            repository: kjs202/maven
           
 #       - name: push
