--- a/.github/workspace/build.yaml
+++ b/.github/workspace/build.yaml
@@ -1,36 +1,56 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the workflow will run
-on:
-#   # Triggers the workflow on push or pull request events but only for the "main" branch
-#   push:
-#     branches: [ "main" ]
-#   pull_request:
-#     branches: [ "main" ]
 
-  # Allows you to run this workflow manually from the Actions tab
+on:
+ 
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
+
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  zip-files:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      
+      - uses: actions/checkout@v2
+      - run : rm -f result*
+      - uses: vimtor/action-zip@v1
+        with:
+          files: ${{github.workspace}}
+          dest: result-${{ github.sha }}.zip
+#       - name: push
+#         uses: actions-x/commit@v6
+#       - uses: actions/upload-artifact@v1
+#         with:
+#           name: my-artifact
+#           path: ${{ github.workspace }}/result-${{ github.sha }}.zip
+          
+      - name: Commit & Push changes
+#         run: |
+#           cat ${{ env.Filename}}
+        uses: actions-js/push@master
+        with:
+           github_token: ${{ secrets.MAVEN_ZIP}}
+           branch: main
+           message: 'Auto commit from github action zip'
+           directory: dev
+           repository: kjs202/maven
+          
+#       - name: push
+#         uses: actions-x/commit@v6
+#         with:
+#           name: GitHub Actions Autocommitter
+#           branch: main
+#           files: ${{ github.workspace }}/result-${{ github.sha }}.zip
+#           repository: https://github.com/kjs2021/maven
+#           token: ${{ github.token }}
+#           force: true
+         
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+       
+     
